quotes component content added

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,1 @@
-<div>
-  <h1> Quotes</h1>
-  <h3>Please Quote Below, Like or dislike For Thumbs Up and 
-    Thumbs-down respectively,,Come with us {{quote}}</h3>
-</div>
+<app-quote></app-quote>
