quotes component htm file content added

--- a/src/app/quote/quote.component.html
+++ b/src/app/quote/quote.component.html
@@ -1,9 +1,10 @@
 <div>
-    <h1>My Goals</h1>
+    <h1>My Quotes</h1>
     <hr>
     <ul>
-      <li *ngFor='let goal of goals'>
-        {{goal.name}}
+      <li *ngFor='let quote of quotes'>
+        {{quote.}}
+        <app-quote [quote]='quote'></app-quote>
       </li>
     </ul>
   </div>
