child component chil added

--- a/src/app/quote/quote.component.html
+++ b/src/app/quote/quote.component.html
@@ -3,8 +3,9 @@
     <hr>
     <ul>
       <li *ngFor='let quote of quotes'>
-        {{quote.}}
-        <app-quote [quote]='quote'></app-quote>
+        {{quote.name}}
+        
       </li>
     </ul>
   </div>
+  
