--- a/src/app/quote/quote.component.html
+++ b/src/app/quote/quote.component.html
@@ -1,11 +1,8 @@
-<div>
-    <h1>My Quotes</h1>
-    <hr>
-    <ul>
-      <li *ngFor='let quote of quotes'>
-        {{quote.name}}
-        
-      </li>
-    </ul>
+<h1>My Goals</h1>
+<hr>
+<ul>
+  <div *ngFor='let quote of quotes;let i = index'>
+    <li>{{quote.name}}</li>
+    <button (click)='toggleDetails(i)'>Toggle Quotes</button>
   </div>
-  
+</ul>
