--- a/src/app/quote-chil/quote-chil.component.html
+++ b/src/app/quote-chil/quote-chil.component.html
@@ -1,2 +1,3 @@
 <p>{{quote.description}}</p>
-<button (click)= 'quoteComplete(true)'>Complete</button>
+<p> This Quote was posted on {{quote.completeDate|dateCount}} days</p>
+<button (click)= 'quoteDelete(true)'>Delete Quote</button>
