--- a/src/app/quote/quote.component.html
+++ b/src/app/quote/quote.component.html
@@ -1,22 +1,81 @@
-<div class="container">
-  <h1>My Quotes</h1>
-  <hr>
+<!DOCTYPE html>
+<html lang="en">
 
-  <div class="row">
-    <div class="col-md-6">
-      <div *ngFor='let quotes of quotes;let i = index'>
-        <div>
-          <button (click)='toggleQuotes(i)' class="btn btn-primary">Toggle Quotes</button>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Quote</title>
+</head>
+
+<body>
+    <div class="container">
+        <h2 class="text-center mt-3">Quote</h2>
+        <p class="text-center">Quote With us,,Enjoy...</p>
+        <hr>
+        <app-quote-form (addQuote)="newQuote($event)"></app-quote-form>
+        <hr>
+        <div class="alert alert-danger">
+            <p>Like a Quote!</p>
+        </div>
+        <div *ngIf='bestQuote'>
+            <div class="row pt-5">
+                <div class="col-sm">
+                    <div class="card testimonial-card">
+                        <div class="card-body" appHighlightBestQuote>
+                            <h4 class="card-title text-uppercase black-text">{{bestAuthor}}</h4>
+                            <hr>
+                            <p class="white-text"><i class="fas fa-quote-left pr-1"></i>{{bestQuote}}<i
+                                    class="fas fa-quote-right pl-1"></i>
+                            </p>
+                            <span class="row white-text">Submitted By: <h4 class="deep-orange-text pl-3">{{bestUser}}
+                                </h4>
+                                <h4 class="pl-5 white-text">{{date|dateCount}} days ago</h4>
+                            </span>
+                            <div class="row ">
+                                <i class="far fa-thumbs-up h1 pr-4"></i>
+                                <i class="far fa-thumbs-down h1"></i>
+
+                            </div>
+                            <span class="pr-5">{{bestVotes}}</span>
+                            <span class="pr-5">{{lowVotes}}</span>
+                            
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+        <div class="row pt-5" *ngFor="let Quote of Quotes;let mIndex =index" height=17px>
+            <div class="col-sm">
+                <div class="card testimonial-card">
+                    <div class="card-body">
+                        <h4 class="card-title text-secondary text-uppercase">{{Quote.author}}</h4>
+                        <hr>
+                        <p><i class="fas fa-quote-left pr-1"></i>{{Quote.quote}}<i class="fas fa-quote-right pl-1"></i>
+                        </p>
+                        <span class="row">Submitted By: <h5 class="deep-orange-text pl-3">{{Quote.user}}
+                            </h5>
+                            <h5 class="pl-5">{{Quote.completeDate |dateCount}} days ago</h5>
+                        </span>
+                        <div class="row ">
+                            <i class="far fa-thumbs-up h1 pr-4 text-primary" (click)='upVote(Quote)'></i>
+                            <i class="far fa-thumbs-down h1 text-warning" (click)='downVote(Quote)'></i>
+                            <hr>
+                            <button class="btn btn-danger" (click)='deleteQuote($event,mIndex)' >Delete Quote</button>
+                                
+                                    
+                        </div>
+                        <span class="pr-5">{{Quote.upvotes}}</span>
+                        <span class="pr-5">{{Quote.downvotes}}</span>
+                        
+
+                    </div>
+                </div>
+            </div>
         </div>
 
-        <div *ngIf='quote.showDescription'>
-          <app-quote-chil  [quote]='quote' (isComplete) = 'deleteQuote($event,i)'></app-quote-chil>
-        </div>
-      </div>
     </div>
-    <div class="col-md-6">
-      <app-quote-form></app-quote-form>
-    </div>
-  </div>
- 
-</div>
+
+</body>
+
+</html>
