clear button removed

--- a/src/app/quote/quote.component.html
+++ b/src/app/quote/quote.component.html
@@ -14,7 +14,7 @@
         <hr>
         <app-quote-form (addQuote)="newQuote($event)"></app-quote-form>
         <hr>
-        <div class="alert alert-danger">
+        <div>
             <p>Like a Quote!</p>
         </div>
         <div *ngIf='bestQuote'>
