--- a/src/app/quote-form/quote-form.component.html
+++ b/src/app/quote-form/quote-form.component.html
@@ -40,7 +40,7 @@
                       </div>
                   </div>
                   <div class="modal-footer">
-                      <button type="button" class="btn btn-secondary">Clear</button>
+                      <!-- <button type="button" class="btn btn-secondary">Clear</button> -->
                       <button type="submit" class="btn btn-primary">Add Quote</button>
                   </div>
               </form>
@@ -54,7 +54,7 @@
   <div class="modal-dialog" role="document">
       <div class="modal-content">
           <div class="modal-header">
-              <h5 class="modal-title" id="exampleModalLabel">Create Quote</h5>
+              <h5 class="modal-title" id="exampleModalLabel" >Create Quote</h5>
               <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                   <span aria-hidden="true">&times;</span>
               </button>
@@ -87,7 +87,7 @@
                       </div>
                   </div>
                   <div class="modal-footer">
-                      <button type="button" class="btn btn-secondary">Clear</button>
+                      <!-- <button type="button" class="btn btn-secondary">Clear</button> -->
                       <button type="submit" class="btn btn-primary">Add Quote</button>
                   </div>
               </form>
