--- a/src/app/quote/quote.component.html
+++ b/src/app/quote/quote.component.html
@@ -10,7 +10,7 @@
 <body>
     <div class="container">
         <h2 class="text-center mt-3">Quote</h2>
-        <p class="text-center">Quote With us,,Enjoy...</p>
+        <p class="text-center">Quote With us,,Enjoy Our Quotes...</p>
         <hr>
         <app-quote-form (addQuote)="newQuote($event)"></app-quote-form>
         <hr>
