--- a/src/app/quote/quote.component.html
+++ b/src/app/quote/quote.component.html
@@ -33,7 +33,7 @@
               <span class="row white-text">Written By:
                 <h4 class="deep-orange-text pl-3">{{ bestUser }}</h4>
                 <h4 class="pl-5 white-text">
-                  {{ date | dateCount }} days ago
+                  {{ date | dateCount }}
                 </h4>
               </span>
               <div class="row">
@@ -62,7 +62,7 @@
             <span class="row">Written By:
               <h5 class="deep-orange-text pl-3">{{ Quote.user }}</h5>
               <h5 class="pl-5">
-                {{ Quote.completeDate | dateCount }} days ago
+                {{ Quote.completeDate | dateCount }} 
               </h5>
             </span>
             <div class="row">
